# furlough

./: .bazelrc  BUILD.bazel  WORKSPACE  go.mod  go.sum
.github/workflows/: ci.yml
cmd/furlough/: BUILD.bazel  list.go  listen.go  main.go
